--- a/style.css
+++ b/style.css
@@ -5,15 +5,24 @@ body {
   background: #323232;
 }
 
+#user-playlists-songs tr:hover {
+  background: #1e1e1e;
+}
+
+#user-playlists tr:hover {
+  background: #1e1e1e;
+}
+
 #login {
+  text-align: center;
   position: absolute;
   margin: auto;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  height: 200px;
-  width: 200px;
+  height: 400px;
+  width: 400px;
 }
 
 #user-profile {
