--- a/style.css
+++ b/style.css
@@ -2,15 +2,21 @@ body {
   height: 100%;
   width: 100%;
   color: white;
-  background: #323232;
+  background: #1a1a1a;
+  font-family: sans-serif;
 }
 
 #user-playlists-songs tr:hover {
-  background: #1e1e1e;
+  background-color: #333333;
 }
 
 #user-playlists tr:hover {
-  background: #1e1e1e;
+  background-color: #333333;
+}
+
+th {
+  text-align: left;
+  padding-left: 10px;
 }
 
 #login {
@@ -35,13 +41,30 @@ body {
   border-right-width: 2px;
   border-right-color: grey;
   float: left;
-  height: 98vh;
+  height: 50vh;
   width: 10%;
 }
 
 #user-playlists-songs {
   float: left;
-  height: 800px;
+  height: 50vh;
   overflow: auto;
   width: 80%;
+}
+
+table {
+  border-collapse: collapse;
+}
+
+td {
+  height:15px;
+  padding: 7.5px 0px 7.5px 10px;
+  margin-left: 10px;
+  background-clip: content-box;
+  background-color: #1a1a1a;
+}
+
+tr {
+  background-color: green;
+  border-bottom: thin solid grey;
 }
