--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
   background: #1e1e1e;
 }
 
+
 #login {
   text-align: center;
   position: absolute;
@@ -41,7 +42,43 @@ body {
 
 #user-playlists-songs {
   float: left;
-  height: 800px;
+  height: 350px;
   overflow: auto;
   width: 80%;
+}
+
+#scatter {
+  float: left;
+  text-align: center;
+  padding-top: 20px;
+}
+
+#scatter table {
+  margin: 0 auto;
+  border-spacing: 10px;
+  border-collapse: separate;
+}
+
+#scatter table td{
+  font-size: 10px;
+  background: #1e1e1e;
+  border-radius: 5px;
+  padding: 5px;
+}
+
+.axisX path {
+  stroke: white;
+}
+
+.axisY path {
+  stroke: white;
+}
+
+.axisX {
+  stroke: white;
+}
+
+
+.axisY {
+  stroke: white;
 }
