--- a/style.css
+++ b/style.css
@@ -66,6 +66,24 @@ body {
   padding: 5px;
 }
 
+#scatter #axisY td:hover{
+  color: orange;
+}
+
+#scatter #axisX td:hover{
+  color: lightblue;
+}
+
+#scatter svg {
+  padding-left: 10px;
+  border-left-style: solid;
+  border-left-width: 1px;
+  border-left-color: orange;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-bottom-color: lightblue;
+}
+
 .axisX path {
   stroke: white;
 }
