--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 #user-playlists tr:hover {
-  background-color: #333333;
+  border-left: 5px solid #1db954;
 }
 
 th {
@@ -37,19 +37,22 @@ th {
 }
 
 #user-playlists {
-  border-right-style: solid;
+  display: block;
+ /* border-right-style: solid;
   border-right-width: 2px;
-  border-right-color: grey;
+  border-right-color: grey;*/
   float: left;
   height: 50vh;
   width: 10%;
 }
 
 #user-playlists-songs {
+  display: block;
+  border-left: 2px solid grey;
   float: left;
   height: 50vh;
   overflow: auto;
-  width: 80%;
+  width: 40%;
 }
 
 table {
@@ -60,11 +63,24 @@ td {
   height:15px;
   padding: 7.5px 0px 7.5px 10px;
   margin-left: 10px;
-  background-clip: content-box;
-  background-color: #1a1a1a;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 1px;
 }
 
 tr {
-  background-color: green;
+  background-color: #1a1a1a;
   border-bottom: thin solid grey;
+}
+/*#user-playlists tr {
+  border-left: 5px solid #1a1a1a;  
+}*/
+
+.selected-playlist {
+  border-left: 5px solid #1db954;
+}
+
+.selected-song {
+  background-color: #4d4d4d;
 }
